metadata/force-app/main/default/objects/ccrz__E_ProductItemI18N__c/fields/ccrz__LongDesc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LongDesc__c</fullName>
    <description>Long description in the language referenced by the locale</description>
    <label>LongDesc</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>