metadata/force-app/main/default/objects/ccrz__E_ProductItemI18N__c/fields/ccrz__LongDescRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LongDescRT__c</fullName>
    <description>Rich Text field for the Long description in the language referenced by the locale.</description>
    <label>LongDescRT</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>