metadata/force-app/main/default/objects/ccrz__E_ProductItemI18N__c/fields/ccrz__ShortDesc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDesc__c</fullName>
    <description>Short description in the language referenced by the locale</description>
    <label>ShortDesc</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>