metadata/force-app/main/default/objects/ccrz__E_ProductItemI18N__c/fields/ccrz__ShortDescRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDescRT__c</fullName>
    <description>Rich Text field for the Short description in the language referenced by the locale.</description>
    <label>ShortDescRT</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>