metadata/force-app/main/default/objects/ccrz__E_ProductItemI18N__c/fields/ccrz__UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>ccrz__UnitOfMeasure__c</fullName>
    <description>Unit of measure in the language referenced by the locale</description>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>